# zenodo_download

./: LICENSE  README.md  pyproject.toml
src/zenodo_download/: download.py
